k8s/mongo-deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: mongo-deployment
  namespace: project3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
        - name: mongo
          image: mongo:latest
          ports:
            - containerPort: 27017
          volumeMounts:
              - name: mongo-data
                mountPath: /data/db
      volumes:
        - name: mongo-data
          persistentVolumeClaim:
            claimName: mongo-pvc
