k8s/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: rating-app
  labels:
    app: backend
spec:
  selector:
    app: backend
  ports:
    - name: http
      port: 5000
      targetPort: 5000
    - name: metrics
      port: 9464
      targetPort: 9464
  type: ClusterIP
