k8s/backend-svc.yml
kind: Service
apiVersion: v1
metadata:
  name: backend-service
  namespace: project3
spec:
  type: NodePort
  selector:
    app: backend
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 30200
