k8s/frontend-svc.yml
kind: Service
apiVersion: v1
metadata:
  name: frontend-svc
  namespace: project3
spec:
  type: NodePort
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30100
