k8s/headless.yml
kind: Service
apiVersion: v1
metadata:
  name: mongo
  namespace: project3
spec:
  clusterIP: None
  selector:
    app: mongo
  ports:
    - port: 27017
      targetPort: 27017
