k8s/mongo-headless.yml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-svc
  namespace: rating-app
spec:
  clusterIP: None
  selector:
    app: mongo
  ports:
    - port: 27017
      targetPort: 27017
