k8s/mongo-svc.yml
kind: Service
apiVersion: v1
metadata:
  name: mongo
  namespace: project2
spec:
  selector:
    app: mongo
  ports:
  - port: 27017
    targetPort: 27017
